--- a/index.html
+++ b/index.html
@@ -7751,6 +7751,7 @@
         const betrayedPacts = [];
 
         safeActive.forEach(a => {
+          if (!a) return;
           const promisorVote = effectiveVotes[a.promisorIdx];
           const promisedOpt = gs.negotiationSwitches?.[a.promisorIdx];
           let status = 'Cumplido';
@@ -7761,16 +7762,16 @@
           } else if (!winOpt) {
             status = 'Archivado';
           }
-
           currentPacts.push({ ...a, status, turnResolved: gs.turn });
         });
 
         const existingPacts = Array.isArray(gs.pacts) ? gs.pacts : Object.values(gs.pacts || {});
 
-        // Update newGs with results
+        // Merge results into newGs
         newGs = {
           ...newGs,
-          pacts: [...existingPacts, ...currentPacts],
+          players: updatedPlayers,
+          pacts: [...existingPacts, ...currentPacts].filter(Boolean),
           activeAgreements: [],
           logs: [
             ...logs,
@@ -7791,7 +7792,7 @@
           const newMedia = Math.min(10, Math.max(0, (gs.media || 5) + (lastResults.percent / 20) - 2));
 
           // Apply Betrayal Penalties (immediate seat transfer)
-          let finalPlayers = updatedPlayers.map(p => ({ ...p }));
+          let finalPlayers = newGs.players.map(p => ({ ...p }));
           betrayedPacts.forEach(p => {
             if (finalPlayers[p.promisorIdx] && finalPlayers[p.promisorIdx].seats > 5) {
               finalPlayers[p.promisorIdx].seats -= 5;
@@ -7828,7 +7829,7 @@
             isAiProcessing: false
           };
         } else {
-          newGs.players = updatedPlayers;
+          // Alignment already updated in newGs.players above
           newGs.isAiProcessing = false;
         }
 
@@ -8166,11 +8167,14 @@
               <span className="text-2xl font-bold tracking-tighter uppercase italic">MauriLand <span className="text-[10px] font-black text-slate-500 ml-2">SALA: {roomCode}</span></span>
             </div>
             <div className="flex space-x-8 text-sm font-bold uppercase tracking-widest text-slate-400">
-              {['players', 'dashboard', 'parliament', 'negotiation', 'logs'].map(t => (
-                <button key={t} onClick={() => setTab(t)} className={`hover:text-white transition-all ${tab === t ? 'border-b-2 border-blue-500 pb-1 text-white' : ''}`}>
-                  {t === 'players' ? 'Cámara' : t === 'dashboard' ? 'Nación' : t === 'parliament' ? 'Votos' : t === 'negotiation' ? 'Pactos' : 'Actas'}
-                </button>
-              ))}
+              {['players', 'dashboard', 'parliament', 'negotiation', 'logs'].map(t => {
+                const count = t === 'negotiation' ? (Array.isArray(gs?.pacts) ? gs.pacts.length : Object.keys(gs?.pacts || {}).length) + (Array.isArray(gs?.activeAgreements) ? gs.activeAgreements.length : Object.keys(gs?.activeAgreements || {}).length) : 0;
+                return (
+                  <button key={t} onClick={() => setTab(t)} className={`hover:text-white transition-all ${tab === t ? 'border-b-2 border-blue-500 pb-1 text-white' : ''}`}>
+                    {t === 'players' ? 'Cámara' : t === 'dashboard' ? 'Nación' : t === 'parliament' ? 'Votos' : t === 'negotiation' ? `Pactos ${count > 0 ? `(${count})` : ''}` : 'Actas'}
+                  </button>
+                );
+              })}
             </div>
             <div className="flex items-center space-x-6">
               <div className="bg-black/40 px-6 py-2 rounded-full border border-white/5 flex items-center space-x-4">
@@ -8828,14 +8832,11 @@
 
                             <button
                               onClick={() => {
-                                const targetSelect = document.getElementById(`target-${pIdx}`);
-                                const benefitSelect = document.getElementById(`benefit-${pIdx}`);
-                                if (!gs.negotiationSwitches?.[pIdx] || !targetSelect.value) {
-                                  alert("Debes seleccionar una opción y un destinatario para el pacto.");
+                                const targetIdx = parseInt(targetSelect.value);
+                                if (isNaN(targetIdx)) {
+                                  alert("Debes seleccionar un destinatario para el pacto.");
                                   return;
                                 }
-
-                                const targetIdx = parseInt(targetSelect.value);
                                 const benefitType = benefitSelect.value;
                                 const benefitText = benefitSelect.options[benefitSelect.selectedIndex].text;
 
@@ -8936,11 +8937,14 @@
       try {
         if (!gs) return null;
         console.log("Render TabNegotiation, GS:", gs);
-        const pastPacts = Array.isArray(gs?.pacts) ? gs.pacts : Object.values(gs?.pacts || {});
-        const activeAgreements = Array.isArray(gs?.activeAgreements) ? gs.activeAgreements : Object.values(gs?.activeAgreements || {});
+        const rawPacts = gs?.pacts || [];
+        const pastPacts = Array.isArray(rawPacts) ? rawPacts : Object.values(rawPacts);
+
+        const rawActive = gs?.activeAgreements || [];
+        const activeAgreements = Array.isArray(rawActive) ? rawActive : Object.values(rawActive);
 
         // Merge them for display
-        const allPacts = [...activeAgreements, ...pastPacts];
+        const allPacts = [...activeAgreements, ...pastPacts].filter(p => p && (p.promisorName || p.beneficiaryName));
         const players = gs?.players || [];
 
         return (
@@ -8953,7 +8957,7 @@
             {allPacts.length === 0 ? (
               <div className="glass rounded-[3rem] p-16 text-center space-y-6 opacity-60">
                 <Icon name="shake" className="w-16 h-16 text-slate-700 mx-auto" />
-                <p className="text-slate-500 uppercase text-sm font-black tracking-widest">No hay registros de pactos en esta administración</p>
+                <p className="text-slate-500 uppercase text-sm font-black tracking-widest">No hay registros de pactos en esta administración ({allPacts.length})</p>
               </div>
             ) : (
               <div className="glass rounded-[2.5rem] overflow-hidden border border-white/10">
